WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273801
ImageDecoderCG::createFrameImageAtIndex's use of m_uti is not thread safe
https://bugs.webkit.org/show_bug.cgi?id=273801
Summary
ImageDecoderCG::createFrameImageAtIndex's use of m_uti is not thread safe
Ryosuke Niwa
Reported
2024-05-06 16:16:33 PDT
ImageDecoderCG::createFrameImageAtIndex uses m_uti in non-main thread. This is not thread safe.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-05-06 16:20:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28208
EWS
Comment 2
2024-05-06 19:30:59 PDT
Committed
278438@main
(f0697eb70f0c): <
https://commits.webkit.org/278438@main
> Reviewed commits have been landed. Closing PR #28208 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-05-06 19:31:15 PDT
<
rdar://problem/127640626
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug