ImageDecoderCG::createFrameImageAtIndex's use of m_uti is not thread safe https://bugs.webkit.org/show_bug.cgi?id=273801

Reviewed by Said Abou-Hallawa.

Replace the use of ImageDecoderCG::uti in ImageDecoderCG::createFrameImageAtIndex
with a boolean to make it thread safe.

* Source/WebCore/platform/graphics/cg/ImageDecoderCG.cpp:
(WebCore::ImageDecoderCG::createFrameImageAtIndex):
(WebCore::ImageDecoderCG::setData):
* Source/WebCore/platform/graphics/cg/ImageDecoderCG.h:
* Source/WebCore/platform/network/DataURLDecoder.cpp:
(WebCore::DataURLDecoder::parseMediaType):

Canonical link: https://commits.webkit.org/278438@main